--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "next": "14.2.6",
+    "react": "^19.0.0-rc-f65ac7bd-20240826",
+    "react-dom": "^19.0.0-rc-f65ac7bd-20240826",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
+  },
+  "overrides": {
+      "@types/react": "npm:types-react@rc",
+      "@types/react-dom": "npm:types-react-dom@rc"
   },
   "devDependencies": {
     "typescript": "^5",
