--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "next build",
     "next-dev": "next dev",
     "start": "next start",
-    "lint": "next lint",
+    "flask-dev": "FLASK_DEBUG=1 pip install -r requirements.txt && python3 -m flask --app api/main run -p 8000",
     "dev": "concurrently \"bun run next-dev\" \"bun run flask-dev\"",
-    "flask-dev": "FLASK_DEBUG=1 pip install -r requirements.txt && python3 -m flask --app api/main run -p 8000"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/react": "npm:types-react@rc",
