--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "builds": [
-    { "src": "api/main.py", "use": "@vercel/python" },
+    { "src": "api/__init__.py", "use": "@vercel/python" },
     { "src": "package.json", "use": "@vercel/next" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/main.py" },
+    { "src": "/api/(.*)", "dest": "api/__init__.py" },
     { "src": "/(.*)", "dest": "/$1" }
-  ]
+  ],
+  "env": {
+    "FLASK_ENV": "production"
+  }
 }
