--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "flask-dev": "FLASK_DEBUG=1 pip install -r requirements.txt && python3 -m flask --app api/main run -p 8000",
     "dev": "concurrently \"bun run next-dev\" \"bun run flask-dev\"",
-    "lint": "next lint",
-    "vercel-build": "bash ./vercel_build.sh"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/react": "npm:types-react@rc",
