--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
 {
-  "builds": [
-    {
-      "src": "api/__init__.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+    "builds": [
+        { "src": "api/main.py", "use": "@vercel/python", "config": { "runtime": "python3.12" } },
+        { "src": "package.json", "use": "@vercel/next" }
+      ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/__init__.py" },
+    { "src": "/api/(.*)", "dest": "api/main.py" },
     { "src": "/(.*)", "dest": "/$1" }
-  ],
-  "env": {
-    "FLASK_ENV": "production"
-  }
+  ]
 }
+
